basic login template
dummy login template testing

--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Title of the document</title>
+  <title>UITM Website</title>
+  <h1>DASHBOARD</h1>
+  <h2>LOGIN</h2>
+  <style type="text/css">
+      body{ font: 14px sans-serif; }
+      .wrapper{ width: 350px; padding: 20px; }
+  </style>
 </head>
 <body>
-  This is Maven Boffin!
   
-  <?php 
+  <?php
   echo "this is php";
   ?>
-</body>
+
+ </div>
+
+  <div class="container">
+    <p>Username</p>
+    <input type="text" placeholder="Enter Username">
+
+    <p>Password</p>
+    <input type="password" placeholder="Enter Password">
+
+    <button type="submit">Login</button>
+    
+  </div>
+
+  <label>
+      <input type="checkbox" checked="checked" name="remember"> Remember me
+    </label>
+
+  <div class="container" style="background-color:#f1f1f1">
+    <button type="button" class="cancelbtn">Cancel</button>
+    
+  </div>
+    <span class="psw">Forgot password?</span>
+</body> 
 </html>
